--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 								<a target='_blank' rel='noopener no referrer' href='https://github.com/knt-zhang/SpeedySnake'><h3>Speedy Snake</h3></a>
 							</li>
 							<li>
-								<span class="icon solid major fa-university"></span>
-								<h3>Bank Management System</h3>
+								<a target='_blank' rel='noopener no referrer' href='https://github.com/knt-zhang/BMS'><span class="icon solid major fa-university"></span></a>
+								<a target='_blank' rel='noopener no referrer' href='https://github.com/knt-zhang/BMS'><h3>Bank Management System</h3></a>
 							</li>
 						</ul>
 					</div>
