--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<section id="footer">
 				<div class="container">
 					<header class="major">
-						<h2>Check out my Resume</h2>
+						<h2>Click the button below for my resume</h2>
 					</header>
 					<form method="post" action="#">
 						<div class="row gtr-uniform">
