--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>Who I am</h2>
+							<h2>Who Am I</h2>
 						</header>
 						<p>Hello. My name is Kent Zhang.</p>
 						<p>I am an aspiring software engineer.</p>
@@ -456,7 +456,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<section id="footer">
 				<div class="container">
 					<header class="major">
-						<h2>Click the button below for my resume</h2>
+						<h2>Resume</h2>
 					</header>
 					<form method="post" action="#">
 						<div class="row gtr-uniform">
