--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
 							<div class="col-12"> -->
 								<ul class="actions special">
-									<a class = 'button primary' target='_blank' rel='noopener no referrer' href='kent_resume.pdf'>Resume</a>
+									<a class = 'button primary' target='_blank' rel='noopener no referrer' href='kent_zhang.pdf'>Resume</a>
 									<!-- <li><input type="submit" value="Resume" class="primary" /></li> -->
 								</ul>
 							</div>
